# jwpub-toolkit

./: .gitignore  JWPUB_FORMAT.md  README.md  pyproject.toml
examples/legenda-colori/: Legenda colori.html  Riconoscimenti.html
src/jwpub_toolkit/: __init__.py  bible.py  cli.py  creator.py  crypto.py  db_schema.py  diff.py  extractor.py
