[project]
name = "jwpub-toolkit"
version = "1.0.0"
description = "Create, extract and compare JWPUB files for JW Library"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "cryptography>=42.0.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.0",
]

[project.scripts]
jwpub-toolkit = "jwpub_toolkit.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
